@@ -1327,14 +1327,11 @@ static void	DBlld_remove_lost_resources(zbx_vector_ptr_t *items, unsigned short 
  * Purpose: add or update discovered items                                    *
  *                                                                            *
  ******************************************************************************/
-void	DBlld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, struct zbx_json_parse *jp_data, char **error,
-		const char *f_macro, const char *f_regexp, ZBX_REGEXP *regexps, int regexps_num,
+void	DBlld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, zbx_vector_ptr_t *lld_rows, char **error,
 		unsigned short lifetime, int lastcheck)
 {
 	const char		*__function_name = "DBlld_update_items";
 
-	struct zbx_json_parse	jp_row;
-	const char		*p;
 	DB_RESULT		result;
 	DB_ROW			row;
 	zbx_vector_ptr_t	items;
@@ -1365,7 +1362,8 @@ void	DBlld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, struct zbx
 				*snmpv3_securityname, *snmpv3_authpassphrase, *snmpv3_privpassphrase, *username,
 				*password, *publickey, *privatekey, *description;
 		unsigned char	type, value_type, data_type, status, multiplier, delta, snmpv3_securitylevel, authtype;
-		int		delay, history, trends;
+		int		delay, history, trends, i;
+		zbx_lld_row_t	*lld_row;
 
 		ZBX_STR2UINT64(parent_itemid, row[0]);
 		name_proto = row[1];
@@ -1408,20 +1406,11 @@ void	DBlld_update_items(zbx_uint64_t hostid, zbx_uint64_t lld_ruleid, struct zbx
 				snmpv3_privpassphrase, authtype, username, password, publickey, privatekey, description,
 				interfaceid);
 
-		p = NULL;
-		/* {"data":[{"{#IFNAME}":"eth0"},{"{#IFNAME}":"lo"},...]} */
-		/*          ^                                             */
-		while (NULL != (p = zbx_json_next(jp_data, p)))
+		for (i = 0; i < lld_rows->values_num; i++)
 		{
-			/* {"data":[{"{#IFNAME}":"eth0"},{"{#IFNAME}":"lo"},...]} */
-			/*          ^------------------^                          */
-			if (FAIL == zbx_json_brackets_open(p, &jp_row))
-				continue;
+			lld_row = (zbx_lld_row_t *)lld_rows->values[i];
 
-			if (SUCCEED != lld_check_record(&jp_row, f_macro, f_regexp, regexps, regexps_num))
-				continue;
-
-			DBlld_item_make(&items, name_proto, key_proto, params_proto, snmp_oid_proto, &jp_row);
+			DBlld_item_make(&items, name_proto, key_proto, params_proto, snmp_oid_proto, &lld_row->jp_row);
 		}
 
 		zbx_vector_ptr_sort(&items, ZBX_DEFAULT_UINT64_PTR_COMPARE_FUNC);
